# hal

./: .gitignore  CMakeLists.txt  Cargo.toml  readme.md
crates/compile/: Cargo.toml
crates/compile/src/: lib.rs
crates/compile/src/compiler/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: constant.rs  error.rs  lib.rs  trap.rs
crates/core/src/leb128/: mod.rs
crates/core/src/module/: export.rs  function.rs  index.rs  (+6 more)
crates/env/: Cargo.toml  readme.md
crates/env/src/: env.rs  lib.rs  load.rs  spawn.rs
crates/env/src/env/: error.rs  load.rs  mod.rs  single.rs  source.rs  spawn.rs
crates/env/src/env/single_threaded/: load.rs  mod.rs  spawn.rs
crates/env/src/handle/: mod.rs
crates/env/src/instance/: mod.rs
crates/env/src/state/: mod.rs
crates/env/tests/: mod.rs  mono.rs  single_threaded.rs
crates/env/tests/invoke/: exported_invokes_local.rs  local.rs  mod.rs  multiple.rs
crates/env/tests/memory/: store.rs
crates/env/tests/numeric/: add.rs
crates/env/tests/smoke/: mod.rs  single_threaded.rs
crates/env/tests/spec/: core.rs  incubator.rs  mod.rs  readme.md
crates/env/tests/spec/core/: README.md  i32.wast  i64.wast
crates/process/: Cargo.toml
crates/process/src/: instruction.rs  lib.rs  numeric.rs  process.rs  processor.rs  stack.rs  store.rs
crates/validate/: Cargo.toml
crates/wasm/: Cargo.toml
crates/wasm/fixture/: data.wat  func_call.wat  func_params.wat
crates/wasm/src/: error.rs  lib.rs  reader.rs
crates/wasm/tests/: parser.rs
crates/wat/: Cargo.toml
crates/wat/src/: lib.rs  parser.rs
project/: CMakeLists.txt
(+24 files in other folders)
